[workspace]
members = [
	"card_game",
	"klondike",
	"klondike-bench",
	"klondike-cli",
]
resolver = "3"

[workspace.dependencies]
card_game = { version = "0.4.0", path = "card_game", registry = "Quaternions" }
klondike = { version = "0.2.0", path = "klondike", registry = "Quaternions" }

[workspace.lints.rust]
# unsafe_code = "forbid"
# missing_docs = "warn"
# missing_debug_implementations = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
# variant_size_differences = "warn"
unexpected_cfgs = "warn"
