[package]
name = "card_game"
version = "0.2.0"
edition = "2024"
repository = "https://git.aleshym.co/Quaternions/card_game"
license = "MIT OR Apache-2.0"
description = "Card game library."
authors = ["Rhys Lloyd <krakow20@gmail.com>"]
keywords = ["card", "cards", "solitaire", "klondike"]

[dependencies]
arrayvec = { version = "0.7.6", registry = "Quaternions", features = ["len_u8"], default-features = false }

[lints]
workspace = true
