[package]
name = "klondike"
version = "0.4.0"
edition = "2024"

[dependencies]
card_game.workspace = true
rand = { version = "0.10.1", default-features = false, features = ["std_rng"] }
serde = { version = "1.0.228", default-features = false, optional = true }
serde_derive = { version = "1.0.228", default-features = false, optional = true }

[dev-dependencies]
insta = "1.47.2"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", default-features = false }
serde_json = "1.0.149"

[lints]
workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_derive", "card_game/serde"]
